# molehill

./: .gitignore  README.md  constraints.txt  generate_workflow.py  requirements.txt  setup.cfg
.circleci/: config.yml
examples/titanic/: titanic.dig
examples/titanic/queries/: cardinality.sql  impute.sql  normalize.sql  normalize_whole.sql  predict_classifier.sql  predict_randomforest_classifier.sql  split_test.sql  stats.sql  train_classifier.sql  train_randomforest_classifier.sql  (+1 more)
examples/titanic_oversample/: titanic_oversample.dig
examples/titanic_pos_oversample/: titanic_pos_oversample.dig
examples/titanic_rf/: titanic_rf.dig
molehill/: evaluation.py  feature_query.py  generate_workflow.py  imputation.py  normalization.py  pipeline.py  stats.py  utils.py
molehill/model/: __init__.py  base.py  linear_model.py  tree_model.py
molehill/preprocessing/: __init__.py  cardinality.py  downsample_rate.py  impute.py  normalization.py  shuffle.py  vectorization.py
resources/: titanic_pipeline.yml  titanic_pipeline_oversample.yml  titanic_pipeline_pos_oversample.yml  titanic_pipeline_rf.yml  titanic_pipeline_rf_standardize.yml  titanic_rf_pipeline.yml
tests/: test_evaluation.py  test_pipeline.py  test_stats.py  test_utils.py
tests/model/: test_linear_model.py  test_tree_model.py
tests/preprocessing/: test_downsample_rate.py  test_impute.py  test_normalization.py  test_shuffle.py  test_vectorization.py
tests/resources/: titanic.dig  titanic_oversample.dig  titanic_pipeline_oversample.yml  titanic_pipeline_pos_oversample.yml  titanic_rf.dig
(+25 files in other folders)
