[metadata]
name = molehill
version = attr: molehill.__version__
url = https://github.com/chezou/molehill
author = Aki Ariga
author_email = chezou@gmail.com
license_file = LICENSE
description = ML workflow generator for Apache Hivemall and TD workflow
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
  pyyaml
  mypy

[options.entry_points]
console_scripts =
  generate_workflow = molehill.generate_workflow:main
